fixed collapse gii tree if we create new entity and fixed styles

--- a/frontend/routes/SourcesPage/SourcesPage.scss
+++ b/frontend/routes/SourcesPage/SourcesPage.scss
@@ -64,4 +64,10 @@
       background-color: $gray-700;
     }
   }
+
+  .FormView {
+    .FieldLayoutView .InputFieldView__input {
+      color: white;
+    }
+  }
 }
