--- a/frontend/routes/SourcesPage/views/ModelView.scss
+++ b/frontend/routes/SourcesPage/views/ModelView.scss
@@ -57,4 +57,9 @@
     width: auto;
     max-width: 500px;
   }
+
+  .DropDownFieldView__selected-items {
+    height: 28px;
+    min-height: 28px;
+  }
 }
